# iot_project_server_room_security

./: .env  .gitignore  .gitmodules  API_README.md  LICENSE  README.md  app_start.sh  app_stop.sh  pubspec.yaml  pyproject.toml  requirements.txt  server_room_monitor.db  test_gpio.py
android/app/: build.gradle
docs/: Project Brief.docx
iot_based-server-room-monitoring-control/docs/: Project Brief.docx
iot_based-server-room-monitoring-control/firmware/raspberrypi/: README.md
iot_based-server-room-monitoring-control/server/app/: README.md  main.py  routes.py
iot_based-server-room-monitoring-control/server/config/: README.md  config.py  config.yaml
iot_based-server-room-monitoring-control/server/tests/: README.md  test_main.py  test_routes.py
iot_based_server_room_monitoring_control/android-app/: pubspec.yaml
iot_based_server_room_monitoring_control/android-app/app/: build.gradle
iot_based_server_room_monitoring_control/android-app/lib/: main.dart
iot_based_server_room_monitoring_control/android_app/: README.md  pubspec.yaml
iot_based_server_room_monitoring_control/android_app/lib/: config.dart  main.dart
iot_based_server_room_monitoring_control/docs/: Project Brief.docx  README.md  requirements.md
iot_based_server_room_monitoring_control/server/: create_admin_user.py
lib/: main.dart
linux/: my_application.cc
media/videos/: video_1744119269.h264
smart-server-room-monitoring/android-app/: README.md
smart-server-room-monitoring/docs/: README.md  architecture.md
videos/: video_1743978703.h264  video_1743978704.h264
web/: manifest.json
(+112 files in other folders)
