[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "IoT_Based_Server_Monitor_Control"
version = "0.1.0"
description = ""
authors = ["Chrispine Tinega <hello@chrispinetinega.com>"]

[tool.poetry.dependencies]
python = ">=3.11.2"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.11.13"
aiohttp-retry = "2.9.1"
aiosignal = "1.3.2"
annotated-types = "0.7.0"
anyio = "4.8.0"
attrs = "25.3.0"
certifi = "2025.1.31"
charset-normalizer = "3.4.1"
colorzero = "2.0"
fastapi = "0.115.11"
frozenlist = "1.5.0"
gpiozero = "2.0.1"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.28.1"
idna = "3.10"
multidict = "6.1.0"
picamera = "1.13"
propcache = "0.3.0"
pydantic = "2.10.6"
pydantic_core = "2.27.2"
PyJWT = "2.10.1"
requests = "2.32.3"
setuptools = "76.0.0"
sniffio = "1.3.1"
starlette = "0.46.1"
twilio = "9.5.0"
typing_extensions = "4.12.2"
urllib3 = "2.3.0"
yarl = "1.18.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.1"
black = "^25.1.0"
pre-commit = "^4.0.1"
sphinx = "^8.1.3"
